# elevenlabs-tty-tool

./: .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
elevenlabs_tts_tool/: cli.py
elevenlabs_tts_tool/commands/: __init__.py  info_commands.py  model_commands.py  synthesize_commands.py  update_voices_commands.py  voice_commands.py
elevenlabs_tty_tool/: __init__.py  cli.py
tests/: test_utils.py
